--- a/Ejercicios UX_UI/ejrcicioux.html
+++ b/Ejercicios UX_UI/ejrcicioux.html
@@ -92,6 +92,38 @@
         </p>
         <a href="#" class="btn">Saber más</a>
     </section>
+    <!DOCTYPE html>
+<html>
+<style>
+table, th, td {
+  border:0px solid black;
+}
+</style>
+<body>
+
+<h2>Recetas de la semana</h2>
+
+<table style="width:100%">
+  <tr>
+    <th><img src="recetas1.jpg" alt="Papas a la huaicaina" width="470" height="288"></th>
+    <th><img src="recetas2.jpg" alt="Arepas con NotBurger" width="470" height="288"></th>
+    <th><img src="recetas3.jpg" alt="Brownies con NotMilk" width="470" height="288"></th>
+  </tr>
+  <tr>
+    <td>Papas a la huaicaina con NotMilk</td>
+    <td>Arepas con NotBurger</td>
+    <td>Brownies con NotMilk</td>
+  </tr>
+  <tr>
+    <td>Un infaltable de la cocina peruana.</td>
+    <td>¡Alguien dijo arepitas con not burger!</td>
+    <td>Algo dulce, rico y 100% plant based</td>
+  </tr>
+</table>
+
+</body>
+</html>
+
     </main>
 </body>
 </html>
